[hdpowerview] adopt reviewer requests
Signed-off-by: Andrew Fiddian-Green <software@whitebear.ch>