@@ -14,7 +14,6 @@ package org.openhab.binding.hdpowerview.internal.discovery;
 
 import static org.openhab.binding.hdpowerview.internal.HDPowerViewBindingConstants.*;
 
-import java.util.Collections;
 import java.util.Set;
 
 import javax.jmdns.ServiceInfo;
@@ -25,9 +24,14 @@ import org.openhab.binding.hdpowerview.internal.config.HDPowerViewHubConfigurati
 import org.openhab.core.config.discovery.DiscoveryResult;
 import org.openhab.core.config.discovery.DiscoveryResultBuilder;
 import org.openhab.core.config.discovery.mdns.MDNSDiscoveryParticipant;
+import org.openhab.core.i18n.LocaleProvider;
+import org.openhab.core.i18n.TranslationProvider;
 import org.openhab.core.thing.ThingTypeUID;
 import org.openhab.core.thing.ThingUID;
+import org.osgi.framework.FrameworkUtil;
+import org.osgi.service.component.annotations.Activate;
 import org.osgi.service.component.annotations.Component;
+import org.osgi.service.component.annotations.Reference;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -40,7 +44,19 @@ import org.slf4j.LoggerFactory;
 @Component
 public class GatewayDiscoveryParticipant implements MDNSDiscoveryParticipant {
 
+    private static final String LABEL_KEY = "discovery.gateway.label";
+
     private final Logger logger = LoggerFactory.getLogger(GatewayDiscoveryParticipant.class);
+
+    private final TranslationProvider i18nProvider;
+    private final LocaleProvider localeProvider;
+
+    @Activate
+    public GatewayDiscoveryParticipant(final @Reference TranslationProvider i18nProvider,
+            final @Reference LocaleProvider localeProvider) {
+        this.i18nProvider = i18nProvider;
+        this.localeProvider = localeProvider;
+    }
 
     @Override
     public @Nullable DiscoveryResult createResult(ServiceInfo service) {
@@ -50,7 +66,9 @@ public class GatewayDiscoveryParticipant implements MDNSDiscoveryParticipant {
                 DiscoveryResult hub = DiscoveryResultBuilder.create(thingUID)
                         .withProperty(HDPowerViewHubConfiguration.HOST, host)
                         .withRepresentationProperty(HDPowerViewHubConfiguration.HOST)
-                        .withLabel("PowerView Gateway (" + host + ")").build();
+                        .withLabel(i18nProvider.getText(FrameworkUtil.getBundle(getClass()), LABEL_KEY, LABEL_KEY,
+                                localeProvider.getLocale(), host))
+                        .build();
                 logger.debug("mDNS discovered Generation 3 Gateway on host '{}'", host);
                 return hub;
             }
@@ -65,7 +83,7 @@ public class GatewayDiscoveryParticipant implements MDNSDiscoveryParticipant {
 
     @Override
     public Set<ThingTypeUID> getSupportedThingTypeUIDs() {
-        return Collections.singleton(THING_TYPE_GATEWAY);
+        return Set.of(THING_TYPE_GATEWAY);
     }
 
     @Override
